Se muestra la ciudad en el titulo de la búsqueda de Hoteles.

--- a/views/hotel/buscarHoteles.phtml
+++ b/views/hotel/buscarHoteles.phtml
@@ -58,7 +58,7 @@ function initialize(lat, lon, nombre, id) {
                 </ol>
 
 
-                <h1>Hoteles en </h1>
+                <h1>Hoteles en <?php echo  Session::get('sess_sCH_ciudad'); ?> </h1>
             </div>
                 <?php 
                 
