--- a/views/hotel/buscarHoteles/seccionBHoteles.phtml
+++ b/views/hotel/buscarHoteles/seccionBHoteles.phtml
@@ -29,7 +29,7 @@
                                     <table width="100%"  style="margin-top: -15px; margin-left: -15px;">
                                         <tr>
                                             <td rowspan="2" width="210" valign="top">
-                                            <img src="{fotos}" width="200" class="img-thumbnail" style="margin-right: 10px;">  
+                                            <a href='#myModal' data-toggle="modal" id='btnFotosBH' onclick="{rutaFotos}"><img src="{fotos}" onerror="src='{errorFotos}'" width="200" class="img-thumbnail" style="margin-right: 10px;"></a>  
                                             </td>
                                             <td>
                                                 <P style="font-size:11px"><b style="color:#FF9900;">DIRECCI&Oacute;N:</b> {direccion}</P>
