Se incluyen los métodos de Imagenes.js para realizar el proceso de ajax en imágenes controler.

--- a/views/imagen/centerBox/logoVoucher.phtml
+++ b/views/imagen/centerBox/logoVoucher.phtml
@@ -28,7 +28,7 @@
                                 <label style="cursor:pointer; display:none;">
                                     <input style="margin-top:-1px; vertical-align:middle;" type="checkbox" name="chk_flImagenVouAgen" checked="checked"> Eliminar
                                 </label>
-                                <input type="button"  id="btnSubeVoucherAgen" class="btn btn-primary" value="Eliminar" onclick="procesoEnviaForm('frmLogoVouAgen', '<?php echo BASE_URL; ?>imagen/modificarLogoVoucher', 'btnSubeVoucherAgen')">
+                                <input type="button"  id="btnSubeVoucherAgen" class="btn btn-primary" value="Eliminar" onclick="Imagenes.prototype.procesoEnviaForm('frmLogoVouAgen', '<?php echo BASE_URL; ?>imagen/modificarLogoVoucher', 'btnSubeVoucherAgen','<?php echo BASE_URL; ?>imagen/imagenes')">
                             </center>
                         	<?php }else{ ?>   
                             <div class="fileinput fileinput-new" data-provides="fileinput">
@@ -42,7 +42,7 @@
                                 </span>
                                 
                                 <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Remover</a>
-                                <input type="button"  id="btnSubeVoucherAgen" class="btn btn-primary" value="Subir imagen" onclick="procesoEnviaForm('frmLogoVouAgen', '<?php echo BASE_URL; ?>imagen/modificarLogoVoucher', 'btnSubeVoucherAgen')">
+                                <input type="button"  id="btnSubeVoucherAgen" class="btn btn-primary" value="Subir imagen" onclick="Imagenes.prototype.procesoEnviaForm('frmLogoVouAgen', '<?php echo BASE_URL; ?>imagen/modificarLogoVoucher', 'btnSubeVoucherAgen','<?php echo BASE_URL; ?>imagen/imagenes')">
                             </div>
                            <div>
                             
